--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <div class="movies-container" id="movies">
         
     </div>
+    <div id="pagination-container">
+      
+    </div>
   </div>
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
   <script src="js/app.js"></script>
