changed search title

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <!-- <h1 class="margin-0">Powered by OMDb API</h1>
       <h3 class="margin-0">Built with vanilla js, flexbox & axios</h3> -->
       <div class="search-card">
-        <h4 class="margin-0 search-movies-title">Search For any Movies</h4>
+        <h4 class="margin-0 search-movies-title">Search For Movies/Series/Game</h4>
         <form id="handle-form">
           <input type="text" class="search-movies">
         </form>
